--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>If you are not redirected, <a id="go">click here</a>.</p>
   <script>
     // fallback: show the target so you can edit easily
-    document.getElementById('go').href = 'https://PLACEHOLDER';
+    document.getElementById('go').href = 'https://google.com';
   </script>
 </body>
 </html>
