--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=https://PLACEHOLDER">
+  <meta http-equiv="refresh" content="0; url=https://olga-overpotent-hoveringly.ngrok-free.dev">
   <title>Party Photo Upload</title>
 </head>
 <body>
