--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=https://olga-overpotent-hoveringly.ngrok-free.dev">
+  <meta http-equiv="refresh" content="0; url=https://detailed-rapids-rose-entrepreneurs.trycloudflare.com">
   <title>Party Photo Upload</title>
 </head>
 <body>
   <p>If you are not redirected, <a id="go">click here</a>.</p>
   <script>
     // fallback: show the target so you can edit easily
-    document.getElementById('go').href = 'https://olga-overpotent-hoveringly.ngrok-free.dev';
+    document.getElementById('go').href = 'https://detailed-rapids-rose-entrepreneurs.trycloudflare.com';
   </script>
 </body>
 </html>
