--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=https://treo-organizational-aerospace-inspection.trycloudflare.com/upload">
+  <meta http-equiv="refresh" content="0; url=https://closer-cbs-coupled-weblogs.trycloudflare.com">
   <title>Party Photo Upload</title>
 </head>
 <body>
   <p>If you are not redirected, <a id="go">click here</a>.</p>
   <script>
     // fallback: show the target so you can edit easily
-    document.getElementById('go').href = 'https://treo-organizational-aerospace-inspection.trycloudflare.com/upload';
+    document.getElementById('go').href = 'https://closer-cbs-coupled-weblogs.trycloudflare.com';
   </script>
 </body>
 </html>
